# pi_remote_manager

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/config/: app_config.rs  mod.rs
src/core/: image_processor.rs  mod.rs  operations.rs
src/core/file/: file_type.rs  mod.rs  preview.rs
src/core/image/: mod.rs  operations.rs  processor.rs
src/core/utils/: error.rs  image_utils.rs  mod.rs
src/transfer/: method.rs  mod.rs  rsync.rs  ssh.rs  transfer_method.rs
src/ui/: dialogs.rs  file_browser.rs  hybrid_main_window.rs  image_view.rs  main_window.rs  main_window_adapter.rs  mod.rs  operations_panel.rs  transfer_panel.rs
src/ui/browser/: file_browser.rs  mod.rs  remote_browser.rs
src/ui/preview/: document_preview.rs  image_preview.rs  preview_panel.rs  text_preview.rs
src/utils/: error.rs  image.rs  mod.rs
