[package]
name = "pi_remote_manager"
version = "0.1.0"
edition = "2021"
authors = ["Francesco Piscani<fpiscani@stemapks.com>"]
description = "File Remote Manager and Image processing application for Raspberry Pi"

[dependencies]
fltk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
directories = "5.0"
image = "0.24"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
